[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[dependencies]
itertools = "0.13"
hashbrown = "0.15"
regex = "1.11"

# lib proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
rand = "0.10.0-rc.5"
combinations = "0.1.0"
geo = "0.32.0"

[lib]
proc-macro = true
